<resources>
    <string name="app_name">SharedFood</string>
    <string name="default_web_client_id">315482238302-si9u33mg9f96bmn1vprtnkruiats40gl.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1093000132560754</string>
    <string name="fb_login_protocol_scheme">fb1093000132560754</string>
    <string name="facebook_client_token">40a1d5d11693a006ac19ab1859e211bc</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="chat_button_description">לחצן צאט</string>



    <string name="terms_and_conditions">
        <![CDATA[
        <b>1. מבוא</b><br/>
        <b>1.1)</b> אפליקציית FoodShare ("האפליקציה") נועדה לשיתוף מזון בין משתמשים פרטיים.<br/>
        <b>1.2)</b> התקנון מהווה הסכם מחייב בין המשתמש לבין הנהלת האפליקציה.<br/>
        <b>1.3)</b> השימוש באפליקציה מעיד על הסכמת המשתמש לכל תנאי התקנון.<br/>
        <b>1.4)</b> האפליקציה מיועדת למשתמשים מגיל 18 ומעלה בלבד.<br/><br/>

        <b>2. הרשמה ושימוש באפליקציה</b><br/>
        <b>2.1)</b> כל משתמש מחויב לספק פרטים נכונים ומדויקים בעת ההרשמה.<br/>
        <b>2.2)</b> המשתמש אחראי לשמור על סודיות פרטי ההתחברות שלו.<br/>
        <b>2.3)</b> הנהלת האפליקציה רשאית לסרב לאשר חשבונות משתמש לפי שיקול דעתה.<br/>
        <b>2.4)</b> חל איסור מוחלט להעביר את חשבון המשתמש לאחרים.<br/><br/>

        <b>3. כללי השימוש באפליקציה</b><br/>
        <b>3.1)</b> המשתמש מתחייב להשתמש באפליקציה למטרות חוקיות בלבד.<br/>
        <b>3.2)</b> חל איסור מוחלט לפרסם תוכן פוגעני, שקרי, מסחרי או שאינו קשור למזון.<br/>
        <b>3.3)</b> כל פריט מזון שמפורסם באפליקציה חייב להיות בטוח לשימוש ובעל מידע נכון (למשל, תאריך תפוגה ומצב האריזה).<br/>
        <b>3.4)</b> המשתמש מתחייב שלא לעשות שימוש לרעה במערכת, כגון יצירת חשבונות מזויפים או פניות לא ראויות למשתמשים אחרים.<br/><br/>

        <b>4. אחריות המשתמש</b><br/>
        <b>4.1)</b> המשתמש נושא באחריות מלאה לכל תוכן שהוא מפרסם באפליקציה.<br/>
        <b>4.2)</b> המשתמש מתחייב לבדוק בעצמו את טיב המזון לפני השימוש בו.<br/>
        <b>4.3)</b> האפליקציה אינה אחראית לנזק, פציעה או בעיה בריאותית שנגרמה כתוצאה משימוש במזון שפורסם באפליקציה.<br/><br/>

        <b>5. זכויות ההנהלה</b><br/>
        <b>5.1)</b> הנהלת האפליקציה רשאית להסיר תכנים לא ראויים ללא הודעה מוקדמת.<br/>
        <b>5.2)</b> הנהלת האפליקציה רשאית לחסום משתמשים שעוברים על התקנון לפי שיקול דעתה הבלעדי.<br/>
        <b>5.3)</b> הנהלת האפליקציה שומרת לעצמה את הזכות להפסיק את פעילות האפליקציה או חלק משירותיה בכל עת וללא הודעה מוקדמת.<br/>
        <b>5.4)</b> הנהלת האפליקציה רשאית לעדכן את התקנון בכל עת, והעדכונים יחולו מרגע פרסומם.<br/><br/>

        <b>6. פרטיות ושימוש במידע</b><br/>
        <b>6.1)</b> האפליקציה מחויבת לשמירה על פרטיות המשתמשים בהתאם לחוקי הפרטיות.<br/>
        <b>6.2)</b> מידע אישי שנאסף יישמר במאגרי מידע מאובטחים ולא יימסר לצד שלישי ללא הסכמת המשתמש, למעט אם הדבר נדרש על פי חוק.<br/>
        <b>6.3)</b> מידע שנאסף ישמש לשיפור השירות, סינון תוכן בלתי הולם, והתאמה אישית של חוויית המשתמש.<br/><br/>

        <b>7. שימוש לרעה</b><br/>
        <b>7.1)</b> כל ניסיון לשבש את פעילות האפליקציה, כגון פריצה, שליחת ספאם או ניצול לרעה של הפלטפורמה, יגרור צעדים משפטיים נגד המשתמש.<br/>
        <b>7.2)</b> האפליקציה שומרת לעצמה את הזכות להגיש תלונה לרשויות במקרה של שימוש בלתי חוקי.<br/><br/>

        <b>8. אחריות מוגבלת</b><br/>
        <b>8.1)</b> האפליקציה מספקת את השירות "כמו שהוא" (as is) ואינה מתחייבת לזמינות רציפה או לתפקוד ללא תקלות.<br/>
        <b>8.2)</b> הנהלת האפליקציה אינה אחראית לנזק ישיר או עקיף, כספי או אישי, שנגרם כתוצאה מהשימוש באפליקציה.<br/><br/>

        <b>9. פניות ותמיכה</b><br/>
        <b>9.1)</b> ניתן לפנות להנהלת האפליקציה באמצעות כתובת הדוא"ל: michael9090124@gmail.com.<br/>
        <b>9.2)</b> הנהלת האפליקציה אינה מתחייבת להגיב או לטפל בפניות.<br/><br/>

        <b>10. סיום חשבון</b><br/>
        <b>10.1)</b> המשתמש רשאי לסגור את חשבונו בכל עת באמצעות הגדרות האפליקציה.<br/>
        <b>10.2)</b> הנהלת האפליקציה רשאית לסגור חשבונות במקרה של הפרות תקנון או שימוש לרעה.<br/><br/>

        <b>11. סמכות שיפוט</b><br/>
        <b>11.1)</b> תקנון זה כפוף לחוקי מדינת ישראל בלבד.<br/>
        <b>11.2)</b> כל מחלוקת שתתעורר בנוגע לשימוש באפליקציה תידון בבית המשפט המוסמך באזור תל אביב.<br/><br/>

        אנו מודים לכם על השימוש באפליקציית FoodShare ומאחלים חוויית שימוש מהנה ובטוחה!
        ]]>
    </string>

    <string name="contact_us">צור קשר</string>
    <string name="shira_yogev">שירה יוגב (ראש הצוות)</string>
    <string name="shira_email"> shirayogev8@gmail.com</string>
    <string name="michael_idan">מיכאל עידן</string>
    <string name="michael_email"> michael9090124@gmail.com</string>
    <string name="shirel_cohen">שיראל כהן</string>
    <string name="shirel_email"> Shirel.Cohen7@msmail.ariel.ac.il</string>
    <string name="daniel_bas">דניאל בספלוב</string>
    <string name="daniel_email"> danieldaniel2468@gmail.com</string>
    <string name="mail_label">מייל:</string>

</resources>